--- a/style.css
+++ b/style.css
@@ -130,8 +130,8 @@ nav{
 .layer{
     width: 0;
     height: 0;
-    border-top: 500px solid red;
-    border-right: 500px solid blue;
-    border-bottom: 500px solid green;
-    border-left: 500px solid gray;
+    border-top: 500px solid #fff;
+    border-right: 500px solid transparent;
+    border-bottom: 500px solid #fff;
+    border-left: 500px solid #fff;
 }
